fix: Remove left gap by eliminating margin-left on tables-container - sidebar now overlaps content

--- a/frontend/admin-tables.css
+++ b/frontend/admin-tables.css
@@ -85,7 +85,7 @@
     gap: 0;
     padding: 0;
     height: calc(100vh - 140px);
-    margin-left: 100px;
+    margin-left: 0;
     position: relative;
   }
   
@@ -126,7 +126,7 @@
 
 @media (max-width: 480px) {
   .tables-container {
-    margin-left: 80px;
+    margin-left: 0;
   }
   
   .table-tabs-bottom {
@@ -179,17 +179,17 @@
 
 @media (max-width: 768px) {
   .tables-top-bar {
-    margin-left: -100px;
-    width: calc(100% + 100px);
-    padding-left: 100px;
+    margin-left: 0;
+    width: 100%;
+    padding-left: 0;
   }
 }
 
 @media (max-width: 480px) {
   .tables-top-bar {
-    margin-left: -80px;
-    width: calc(100% + 80px);
-    padding-left: 80px;
+    margin-left: 0;
+    width: 100%;
+    padding-left: 0;
   }
 }
 
